# BeamNGpy

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  COMPATIBILITY.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  contributing.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
debug/: MessagePack.lua  README.md  beamngpyDissector.lua
docs/: CLA-entity.md  CLA-individual.md  Makefile  README.md  build.sh  conf.py  contributing.md  deploy_production.sh  generate_index.py  index.rst  modules.rst  root_template.html  root_template_dev.html  test.py
docs/source/: MATLAB.rst  beamngpy.rst  bngros.rst  conf.py  index.rst  modules.rst  readme.rst  requirements.txt  simulink.rst
examples/: GPS_trajectory.py  IdealRADARSensor_IDs_tracking.py  IdealRADARSensor_plot_data.py  README.md  acc_test.py  acc_test1.py  accelerometer_test.py  access_road_network.ipynb  advanced_comfort_analysis.ipynb  ai_line.py  annotation_bounding_boxes.ipynb  annotation_bounding_boxes.py  camera_streaming.py  camera_test.py  change_settings.py  checkpoints.py  east_coast_random.py  feature_overview.ipynb  guide.md  heightmap_importer.py  import_peaks_and_roads.py  lidar_point_cloud_data.py  lidar_test.py  lidar_tour.py  map_sensor_configuration.py  multi_client.ipynb  multishot_camera.ipynb  multishot_camera.py  noise_demo.ipynb  object_placement.ipynb  openDrive_exporter.py  platoon_test.py  platooning.py  powertrain_data.ipynb  procedural_meshes.py  radar_analysis.ipynb  road_definition.py  road_network_exporter.py  road_network_importer.py  roads_plot.ipynb  (+24 more)
examples/data/: Ex_LHT-Complex-X-Junction.xodr  traffic_config_ex.json  traffic_map_sens_config.json
examples/tests/: accelerometer_test.py  (+3 more)
tests/: conftest.py  mesh_test.py  test_accelerometer.py  test_advanced_IMU.py  test_async_communication.py  test_camera.py  test_control.py  test_level.py  test_lidar.py  test_mesh.py  test_multi_client.py  test_powertrain.py  test_quats.py  test_radar.py  test_scenario.py  test_sensors.py  test_skeleton.py  test_spawning.py  test_ultrasonic.py  test_vehicle.py
(+367 files in other folders)
