[metadata]
name = beamngpy
description = Python API to interact with BeamNG.research.
author = BeamNG GmbH
author-email = info@beamng.gmbh
license = MIT
url = https://github.com/BeamNG/BeamNGpy
long-description = file: README.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires = numpy; click; msgpack-python; Pillow; Jinja2
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

[test]
addopts = tests

[tool:pytest]
addopts =
    --cov beamngpy --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.0.3
package = beamngpy
