[metadata]
name = beamngpy
description = Python API to interact with BeamNG.tech.
author = BeamNG GmbH
author_email = tech@beamng.gmbh
license = MIT
url = https://github.com/BeamNG/BeamNGpy
long_description = file: README.md
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires = numpy; msgpack; Pillow; Jinja2; scipy; matplotlib; seaborn
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[test]
addopts = tests

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
